log
Sat, May 17, 2025  9:28:39 PM: 
 tests:  0|5
total_score: 0/70
3f0e54c
Sat, May 17, 2025 11:20:53 PM: 
 sudoku.c | 19 +++++++++++++++++++
 1 file changed, 19 insertions(+)
 tests:  2|4
total_score: 15/70
a6fb456
Sat, May 17, 2025 11:21:13 PM: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|4
total_score: 15/70
010bf18
Sat, May 17, 2025 11:32:28 PM: 
 sudoku.c | 25 +++++++++++++++++++++++++
 1 file changed, 25 insertions(+)
Compilation failed
In file included from test.c:5:0:
sudoku.c: In function 'is_valid':
sudoku.c:49:9: error: unused variable 'k' [-Werror=unused-variable]
     int k = 0;
         ^
cc1.exe: all warnings being treated as errors
f48f2c6
Sat, May 17, 2025 11:32:42 PM: 
Compilation failed
In file included from test.c:5:0:
sudoku.c: In function 'is_valid':
sudoku.c:49:9: error: unused variable 'k' [-Werror=unused-variable]
     int k = 0;
         ^
cc1.exe: all warnings being treated as errors
0ba4091
Sat, May 17, 2025 11:32:59 PM: 
Compilation failed
In file included from test.c:5:0:
sudoku.c: In function 'is_valid':
sudoku.c:49:9: error: unused variable 'k' [-Werror=unused-variable]
     int k = 0;
         ^
cc1.exe: all warnings being treated as errors
673dfa0
Sat, May 17, 2025 11:33:05 PM: 
 sudoku.c | 6 ++----
 1 file changed, 2 insertions(+), 4 deletions(-)
 tests:  5|3
total_score: 35/70
d8b3469
Sat, May 17, 2025 11:34:16 PM: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  5|3
total_score: 35/70
d5406e4
Sat, May 17, 2025 11:47:04 PM: 
 sudoku.c | 15 ++++++++++++++-
 1 file changed, 14 insertions(+), 1 deletion(-)
 tests:  5|3
total_score: 35/70
790a758
